manifests/deployment_backend_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-web-app-depl
  namespace: school-app
spec:
  replicas: 3
  selector:
    matchLabels:
      title: School-Web-App
      framework: spring_boot
  revisionHistoryLimit: 3
#  progressDeadlineSeconds: 300
#  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        title: School-Web-App
        framework: spring_boot
    spec:
      containers:
        - name: school-web-app-pod
          image: thehidden1/school_web_app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
