manifests/deployment_db_master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-master-depl
  namespace: school-app
spec:
  replicas: 1
  selector:
    matchLabels:
      database: master-SchoolDB
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        database: master-SchoolDB
    spec:
      containers:
        - name: database-master-pod
          image: bitnami/postgresql:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-master-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-master-data
          persistentVolumeClaim:
            claimName: database-master-pvc
