manifests/statefull_set_database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-slave-sts
  namespace: school-app
spec:
  replicas: 2
  selector:
    matchLabels:
      database: slave-SchoolDB
  serviceName: "database-slave-service"
  template:
    metadata:
      labels:
        database: slave-SchoolDB
    spec:
      containers:
        - name: database-slave-pod
          image: bitnami/postgresql:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-volume-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: database-volume-claim
        namespace: school-app
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
