manifests/service_backend_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-web-app-service
  namespace: school-app
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    framework: spring_boot
    title: School-Web-App
