manifests/service_database_master.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-master-service
  namespace: school-app
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    database: master-SchoolDB
