manifests/service_database_slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-database-slave-service
  namespace: school-app
  labels:
    database: SchoolDB
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    database: slave-SchoolDB
