manifests/ingress_backend_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-web-app-ingress
  namespace: school-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: school-web-app-service
                port:
                  number: 8080
    - host: schoolwebapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: school-web-app-service
                port:
                  number: 8080
